fix spacing

--- a/htdocs/t/shop/_good.css
+++ b/htdocs/t/shop/_good.css
@@ -4,13 +4,14 @@
 /* COMMON */
 .common-name span { font-size: 32px; line-height: 1px; }
 .common-content { margin: 0 0 30px; }
-#cocktails { padding: 30px 0 0; border-top: 1px solid #ccc; background: linear-gradient(to bottom, #e0e0e0 0%, rgba(255,255,255,0) 40px); }
+#cocktails { padding: 30px 0; border-top: 1px solid #ccc; background: linear-gradient(to bottom, #e0e0e0 0%, rgba(255,255,255,0) 40px); }
 #cocktails .common-content-area { padding: 20px 40px; }
 #cocktails .title { text-align: center; font-size: 24px; line-height: 31px; letter-spacing: 1px; }
 /* END COMMON */
 
 /* COCKTAILS */
-#cocktails .list { margin: 10px 0 49px; text-align: center; }
+#cocktails .list { margin: 10px 0 0; text-align: center; }
+#cocktails .list:empty { display: none; }
 #cocktails .list li { display: inline-block; text-align: center; vertical-align: top; width: 200px; height: 217px; margin: 65px 20px 10px; font-size: 14px; }
 #cocktails .list li a { color: #000; }
 #cocktails .list li .image { height: 166px; margin: 0 0 10px; text-align: center; position: relative; }
